# SR-Assignment

./: README.md  docker-compose.yaml  dockerfile_llm  dockerfile_main  llm_internal_api.py  main.py  pyproject.toml
src/: api_config.py  api_utils.py
src/database/: db_config.py  db_lifespan.py  db_utils.py  sql_creates.py  sql_inserts.py
src/llm/: llm_config.py  llm_inference.py  llm_lifespan.py  llm_utils.py
src/routers/: llm_router.py  tag_extraction.py  talent_search.py  talent_upload.py
src/tests/: _test_main.py  mocking_internal_server.py  search_logic.py  test_get_embedding.py  test_infer_tags.py  test_map_positions.py
